crates/swc_ecma_parser/tests/test262-error-references/fail/b8de6b7c0e5753f1.js.stderr
error: Unexpected token `}`. Expected identifier
 --> $DIR/tests/test262-parser/fail/b8de6b7c0e5753f1.js:1:6
  |
1 | ({[x]})
  |      ^

